<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">圆满人生平台</string>

    <string name="login_success">登陆成功</string>
    <string name="login_fail">登陆失败</string>
    <string name="login_username_empty">账号不能为空</string>
    <string name="login_password_empty">密码不能为空</string>

    <string name="main_back">再按一次退出程序</string>

    <string name="network_state">网络未连接</string>

    <string name="title_name_dynamic">动态</string>
    <string name="title_name_find">精选</string>
    <string name="title_name_app">我的应用</string>
    <string name="title_name_ideaback">意见反馈</string>
    <string name="title_name_help">帮助</string>
    <string name="title_name_setting">设置</string>
    <string name="title_name_drvier_details">行驶记录</string>
    <string name="title_name_drvier_findlocation">查询位置</string>
    <string name="title_name_pic">查看图片</string>

    <string name="ideaback_save_success">提交成功</string>
    <string name="ideaback_save_fail">提交失败</string>

    <string name="setting_exit">是否退出当前账户</string>

    <string name="customerhelp_state_1">暂时不提供此项服务</string>

    <string name="appupdate_text_1">新版本：</string>
    <string name="appupdate_text_2">当前已是最新版</string>
    <string name="appupdate_text_3">版本号获取异常</string>

    <string name="dialog_true_1">是</string>
    <string name="dialog_false_1">否</string>
    <string name="dialog_true_2">更新</string>
    <string name="dialog_false_2">取消</string>
    <string name="dialog_true_3">确定</string>
    <string name="dialog_false_3">取消</string>


    <string name="dialog_true_4">确认</string>
    <string name="dialog_false_4">还未到达</string>
    <string name="dialog_text_1">你已到达预约地，确认后客户将知道你已到达的信息</string>

    <string name="bug_text_1">BUG啦！赶紧下载最新APP或重新启动APP</string>
    <string name="bug_text_2">定位失败，请打开APP权限并重启APP</string>
    <string name="bug_text_3">没有备注</string>

    <string name="driver_order_text_carnum">车牌号</string>
    <string name="driver_order_text_remark">备&#160;&#160;&#160;&#160;注</string>
    <string name="driver_order_text_personnum">人&#160;&#160;&#160;&#160;数</string>
    <string name="driver_order_text_resaon">用车理由</string>
    <string name="driver_order_text_time">时&#160;&#160;&#160;&#160;间</string>
    <string name="driver_order_text_meetlocation">预约地</string>
    <string name="driver_order_text_finallocation">目的地</string>
    <string name="driver_order_text_carlocation">取车地</string>
    <string name="driver_order_text_nowcarlocation">取&#160;&#160;车&#160;&#160;地</string>
    <string name="driver_order_text_go_location">出&#160;&#160;发&#160;&#160;地</string>

    <string name="driver_order_text_customer">客&#160;&#160;&#160;&#160;戶</string>

    <string name="driver_order_text_golocation">出发地</string>
    <string name="driver_order_text_nowlocation">当前地址</string>
    <string name="driver_order_text_nowmileage">当前里程</string>
    <string name="driver_order_text_gomileage">出发里程</string>

    <string name="driver_order_text_back_location">归还地址</string>
    <string name="driver_order_text_back_mileage">归还里程</string>


    <string name="driver_order_text_arrive_location">到达地址</string>
    <string name="driver_order_text_arrive_mileage">到达里程</string>

    <string name="driver_order_text_mileagephoto">里程照片</string>

    <string name="driver_order_hinttext_1">请点击进行定位</string>
    <string name="driver_order_hinttext_2">请填写当前里程</string>

    <string name="driver_order_text_accept">接单</string>
    <string name="driver_order_text_go">出发</string>
    <string name="driver_order_text_reject">拒单</string>
    <string name="driver_order_text_getcar">取车</string>
    <string name="driver_order_text_arrivelocation">到达预约地</string>
    <string name="driver_order_text_takecustomer">接到客户！出发</string>
    <string name="driver_order_text_inlocation">到达目的地</string>
    <string name="driver_order_text_returncar">归还车辆</string>
    <string name="driver_order_text_details">行驶记录</string>


    <string name="driver_order_check_1">还没有定位地址</string>
    <string name="driver_order_check_2">还没有填写里程</string>
    <string name="driver_order_check_3">还没有上传里程图片</string>

    <string name="splash_jump">跳过</string>

    <string name="base_permissions_1">已获取权限请重新选择</string>
    <string name="base_permissions_2">没有权限打开相册</string>

    <string name="fileupload_permissions">读取相册照片需要相应权限</string>

    <string name="fileupload_change">修改</string>
    <string name="fileupload_delete">删除</string>

    <string name="driver_order_text_orderid">服务单号</string>
    <string name="driver_order_details_title_1">接单</string>
    <string name="driver_order_details_title_2">取车</string>
    <string name="driver_order_details_title_3">出发</string>
    <string name="driver_order_details_title_4">到达预约地</string>
    <string name="driver_order_details_title_5">接到客户</string>
    <string name="driver_order_details_title_6">到达目的地</string>
    <string name="driver_order_details_title_1_time">接单时间</string>
    <string name="driver_order_details_title_2_location">取车地点</string>
    <string name="driver_order_details_title_2_time">取车时间</string>
    <string name="driver_order_details_title_2_mileage">取车里程</string>
    <string name="driver_order_details_title_2_pic">里程照片</string>
    <string name="driver_order_details_title_3_location">出发地点</string>
    <string name="driver_order_details_title_3_time">出发时间</string>
    <string name="driver_order_details_title_3_mileage">出发里程</string>
    <string name="driver_order_details_title_4_time">到达预约地时间</string>
    <string name="driver_order_details_title_5_location">接到客户地点</string>
    <string name="driver_order_details_title_5_time">接到客户时间</string>
    <string name="driver_order_details_title_5_mileage">接到客户里程</string>
    <string name="driver_order_details_title_6_location">到达目的地地址</string>
    <string name="driver_order_details_title_6_time">到达目的地时间</string>
    <string name="driver_order_details_title_6_mileage">到达目的地里程</string>
    <string name="driver_order_details_title_7">还车</string>
    <string name="driver_order_details_title_7_location">还车地址</string>
    <string name="driver_order_details_title_7_time">还车时间</string>
    <string name="driver_order_details_title_7_mileage">还车里程</string>
    <string name="driver_order_details_title_7_pic">里程图片</string>
    <string name="driver_order_details_title_8">合计</string>
    <string name="driver_order_details_title_8_mileage">合计里程</string>
    <string name="map_select_1">到这里去</string>

    <string name="driver_order_accept_fail">接单失败</string>
    <string name="driver_order_accept_success">接单成功</string>

    <string name="driver_order_reject_fail">拒单失败</string>
    <string name="driver_order_reject_success">拒单成功</string>

    <string name="driver_order_serviceonoing_success">保存成功</string>
    <string name="driver_order_serviceonoing_fail">保存失败</string>

    <string name="title_name_goods_audit">单项审核</string>
    <string name="title_name_order_audit_perform">审核执行</string>
    <string name="title_name_goods_audit_perform">审核</string>
    <string name="title_name_order_details">订单详情</string>

</resources>