<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CustomAttr="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_16dp"
    android:background="@drawable/zhy_button_state_item_white"
    android:orientation="vertical">


    <com.shianlife.shian_platform.custom.show.TextShowLayout
        android:id="@+id/layout_carnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        CustomAttr:layoutType="1"
        CustomAttr:titleName="@string/driver_order_text_carnum"></com.shianlife.shian_platform.custom.show.TextShowLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/zhy_line_8" />

    <com.shianlife.shian_platform.custom.show.TextShowLayout
        android:id="@+id/layout_personnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        CustomAttr:layoutType="4"
        CustomAttr:titleName="@string/driver_order_text_personnum"></com.shianlife.shian_platform.custom.show.TextShowLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/zhy_line_8" />

    <com.shianlife.shian_platform.custom.show.TextShowLayout
        android:id="@+id/layout_resaon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        CustomAttr:layoutType="5"
        CustomAttr:titleName="@string/driver_order_text_resaon"></com.shianlife.shian_platform.custom.show.TextShowLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/zhy_line_8" />

    <com.shianlife.shian_platform.custom.show.TextShowLayout
        android:id="@+id/layout_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        CustomAttr:titleName="@string/driver_order_text_time"></com.shianlife.shian_platform.custom.show.TextShowLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/zhy_line_8" />

    <com.shianlife.shian_platform.custom.show.TextShowLayout
        android:id="@+id/layout_meetlocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        CustomAttr:layoutType="3"
        CustomAttr:titleName="@string/driver_order_text_meetlocation"></com.shianlife.shian_platform.custom.show.TextShowLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/zhy_line_8" />

    <com.shianlife.shian_platform.custom.show.TextShowLayout
        android:id="@+id/layout_finallocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        CustomAttr:layoutType="3"
        CustomAttr:titleName="@string/driver_order_text_finallocation"></com.shianlife.shian_platform.custom.show.TextShowLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/zhy_line_8" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_106dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_reject"
            style="@style/zhy_button_submit_level_1"
            android:layout_width="@dimen/dimen_326dp"
            android:layout_height="@dimen/dimen_66dp"
            android:layout_marginRight="@dimen/dimen_1dp"
            android:background="@drawable/zhy_button_level_1_left"
            android:text="@string/driver_order_text_reject" />

        <TextView
            android:id="@+id/tv_accept"
            style="@style/zhy_button_submit_level_1"
            android:layout_width="@dimen/dimen_326dp"
            android:layout_height="@dimen/dimen_66dp"
            android:layout_marginLeft="@dimen/dimen_1dp"
            android:background="@drawable/zhy_button_level_1_right"
            android:text="@string/driver_order_text_accept" />
    </LinearLayout>
</LinearLayout>